2022-09-24T00:38:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3116461403
* notice: last 14d: unq all: 5 5683
* notice: prev accum: outdated-unq outdated-all / unq all: 1044 63308 / 1084 68927
* notice: next accum: outdated-unq outdated-all / unq all: 1050 63692 / 1089 69375
* notice: prev exec diff / last date diff / accum: unq all: +0 +147 -0 -21 / +3 +405 -0 -0 / 3 405
* notice: removed / changed dates: [2022-09-09] / [2022-09-10 2022-09-23]

2022-09-23T16:08:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3114093911
* notice: last 14d: unq all: 5 5619
* notice: prev accum: outdated-unq outdated-all / unq all: 1044 63308 / 1085 68942
* notice: next accum: outdated-unq outdated-all / unq all: 1044 63308 / 1084 68927
* notice: prev exec diff / last date diff / accum: unq all: +0 +120 -1 -135 / +3 +258 -0 -0 / 3 258
* notice: removed / changed dates: [] / [2022-09-09 2022-09-23]

2022-09-23T08:09:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3111269924
* notice: last 14d: unq all: 5 5634
* notice: prev accum: outdated-unq outdated-all / unq all: 1044 63308 / 1086 68969
* notice: next accum: outdated-unq outdated-all / unq all: 1044 63308 / 1085 68942
* notice: prev exec diff / last date diff / accum: unq all: +3 +140 -4 -167 / +3 +138 -0 -0 / 3 138
* notice: removed / changed dates: [] / [2022-09-09 2022-09-22 2022-09-23]

2022-09-23T00:40:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3109689000
* notice: last 14d: unq all: 7 5661
* notice: prev accum: outdated-unq outdated-all / unq all: 1042 62932 / 1085 68525
* notice: next accum: outdated-unq outdated-all / unq all: 1044 63308 / 1086 68969
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -20 / +3 +406 -0 -0 / 3 406