@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-24T00:38:03Z",
-  "count" : 387,
+  "timestamp" : "2022-09-24T08:07:32Z",
+  "count" : 211,
   "count_minmax" : [ 138, 408 ],
-  "count_decinc" : [ -21, +408 ],
+  "count_decinc" : [ -197, +408 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
