@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-24T00:38:03Z",
-  "count" : 405,
-  "count_minmax" : [ 138, 405 ],
-  "count_decinc" : [ -0, +405 ],
+  "timestamp" : "2022-09-24T08:07:32Z",
+  "count" : 407,
+  "count_minmax" : [ 138, 407 ],
+  "count_decinc" : [ -0, +407 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
