@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-24T00:38:03Z",
+  "timestamp" : "2022-09-24T08:07:32Z",
   "count_outdated" : 63692,
   "uniques_outdated" : 1050,
-  "count" : 69375,
-  "uniques" : 1089,
+  "count" : 69338,
+  "uniques" : 1090,
   "clones" : [
     {
       "timestamp": "2022-09-10T00:00:00Z",
-      "count": 387,
+      "count": 211,
       "count_minmax": [ 138, 408 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-09-23T00:00:00Z",
-      "count": 405,
-      "count_minmax": [ 138, 405 ],
+      "count": 407,
+      "count_minmax": [ 138, 407 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
+      "count": 137,
+      "count_minmax": [ 137, 137 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
