@@ -1,3 +1,11 @@
+2022-09-24T08:07:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3117593892
+* notice: last 14d: unq all: 5 5646
+* notice: prev accum: outdated-unq outdated-all / unq all: 1050 63692 / 1089 69375
+* notice: next accum: outdated-unq outdated-all / unq all: 1050 63692 / 1090 69338
+* notice: prev exec diff / last date diff / accum: unq all: +1 +139 -0 -176 / +1 +137 -0 -0 / 1 137
+* notice: removed / changed dates: [] / [2022-09-10 2022-09-23 2022-09-24]
+
 2022-09-24T00:38:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3116461403
 * notice: last 14d: unq all: 5 5683
